--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -3,3 +3,9 @@
     color: #FFF;
     // margin-top: 120px;
 }
+
+.swiper-slide {
+    background-size: cover;
+    height: 80vh !important;
+    object-fit: cover;
+}
