--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -1,11 +1,473 @@
-.home {
-    padding-top: 20px;
-    color: #FFF;
-    // margin-top: 120px;
+$bgColor: #000000;
+$mainColor: #282A3A;
+$headerColor: #735F32;
+$tagsColor: #C69749;
+$headerSize: 44px;
+$mainSize: 18px;
+
+.about {
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    .company {
+        margin-bottom: 3rem;
+        span {
+            font-size: 22px;
+            color: $headerColor;
+            letter-spacing: 5px;
+        }
+        h1 {
+            color: #FFF;
+            font-size: $headerSize;
+            margin-top: 1.2rem;
+            margin-bottom: 1.2rem;
+        }
+        p {
+            font-size: $mainSize;
+            color: #8C8E90;
+            margin-bottom: 1.5rem;
+        }
+    }
+    .about-img {
+        position: relative;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+        .red {
+            width: 220px;
+            height: 150px;
+            background-color: $tagsColor;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            position: absolute;
+            bottom: 3rem;
+            left: -1rem;
+            span {
+                color: #FFF;
+                font-weight: bold;
+                font-size: 16px;
+                letter-spacing: 0 !important;
+            }
+        }
+    }
+    .team {
+        .trust {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            h1 {
+                color: $headerColor;
+                font-size: 35px;
+                i {
+
+                }
+            }
+            p {
+                font-size: $mainSize;
+                color: #8C8E90;
+                margin-bottom: 1.5rem;
+            }
+            div {
+                margin-top: 1.5rem;
+            }
+        }
+        .about-link {
+            margin-top: 2rem;
+        }
+        .about-img {
+            border-bottom: 1px solid #404040;
+            padding-bottom: 2rem;
+        }
+    }
 }
 
-.swiper-slide {
+.we {
+    height: 60vh;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+    .tec {
+        display: flex;
+        div {
+            width: 30%;
+            margin-right: 3%;
+            display: flex;
+            flex-flow: column;
+            justify-content: center;
+            align-items: center;
+            .CircularProgressbar .CircularProgressbar-path {
+                stroke: $tagsColor;
+            }
+            .CircularProgressbar .CircularProgressbar-trail {
+                stroke: #404040;
+            }
+            h5 {
+                color: $tagsColor;
+                margin-top: 1.5rem;
+            }
+            .CircularProgressbar .CircularProgressbar-text {
+                fill: $tagsColor;
+                font-size: 14px;
+            }
+        }
+    }
+    span {
+        font-size: 22px;
+        color: $headerColor;
+        letter-spacing: 5px;
+    }
+    h1 {
+        color: #FFF;
+        font-size: $headerSize;
+        margin-top: 1.2rem;
+        margin-bottom: 1.2rem;
+    }
+}
+
+.services {
+    text-align: center !important;
+    span {
+        font-size: 22px;
+        color: $headerColor;
+        letter-spacing: 5px;
+    }
+    h1 {
+        color: #FFF;
+        font-size: 36px;
+        margin-top: 1.2rem;
+        margin-bottom: 1.2rem;
+    }
+    p {
+        font-size: $mainSize;
+        color: #8C8E90;
+        margin-bottom: 1.5rem;
+    }
+    .best {
+        padding: 3rem;
+        border: 1px solid #404040;
+        border-radius: 6px;
+        margin-bottom: 1.5rem;
+        transition: all .3s;
+        height: 360px;
+        a {
+            text-decoration: line-through;
+            color:$mainColor;
+            visibility: hidden;
+        }
+        i {
+            font-size: 45px;
+            color: $tagsColor;
+        }
+        &:hover {
+            background-color: $tagsColor;
+            transition: all .3s;
+            color: #000 !important;
+            a {
+                visibility: visible;
+            }
+            i {
+                color: #000;
+            }
+            h1 {
+                color: #000;
+            }
+            p {
+                color: #000;
+            }
+        }
+    }
+    .view {
+        position: relative;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+        }
+        div {
+            position: absolute;
+            z-index: 2;
+            height: 100%;
+            width: 100%;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            display: flex;
+            justify-content: center;
+            flex-flow: column;
+            align-items: center;
+            padding: 2rem;
+            background-color: rgba(0, 0, 0, 0.682);
+            text-align: center;
+            p {
+                color: #FFF;
+            }
+        }
+        a {
+            visibility: visible;
+        }
+        &:hover {
+            p {
+                color: #FFF;
+            }
+        }
+    }
+    .top {
+        margin-top: 5rem;
+    }
+}
+
+.testimonial {
+    padding-top: 10rem;
+    position: relative;
+    span {
+        font-size: 22px;
+        color: $headerColor;
+        letter-spacing: 5px;
+    }
+    h1 {
+        color: #FFF;
+        font-size: $headerSize;
+        margin-top: 1.2rem;
+        margin-bottom: 1.2rem;
+    }
+    .test {
+        background-image: url("../../img/ursula-ott-F2jKwng4s7U-unsplash.jpg");
+        background-attachment: fixed;
+        background-position: center center;
+        background-size: cover;
+        height: 600px;
+        width: 100%;
+        margin-bottom: 3rem;
+    }
+    .our {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        .swiper {
+            margin: unset !important;
+            margin-right: 2.5rem !important;
+            position: absolute;
+            right: 0;
+            top: -3rem;
+        }
+    }
+    .count {
+        position: relative;
+        padding-bottom: 3rem;
+        div {
+            text-align: center;
+        }
+        h1 {
+            font-size: 65px;
+            opacity: .25;
+            color: #404040;
+            position: relative;
+            top: 4rem;
+            left: auto;
+            right: auto;
+        }
+        span {
+            font-size: 45px;
+            color: #FFF;
+        }
+        h6 {
+            font-size: 18px;
+            color: $tagsColor;
+        }
+    }
+}
+
+.request {
+    background-image: url("../../img/christoph-theisinger-aTD1exk7Uh8-unsplash.jpg");
+    background-attachment: fixed;
+    background-position: center center;
     background-size: cover;
-    height: 80vh !important;
-    object-fit: cover;
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    span {
+        font-size: 22px;
+        color: $headerColor;
+        letter-spacing: 5px;
+    }
+    h1 {
+        color: #FFF;
+        font-size: 36px;
+        margin-top: 1.2rem;
+        margin-bottom: 1.2rem;
+    }
+    p {
+        font-size: $mainSize;
+        color: #8C8E90;
+        margin-bottom: 1.5rem;
+        width: 60%;
+        margin: auto;
+        margin-bottom: 3rem;
+    }
+}
+
+.blog {
+    height: 100vh;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    .time {
+        padding-bottom: 2rem;
+        margin-bottom: 1rem;
+        border-bottom: 1px solid #404040;
+        span {
+            font-size: 22px;
+            color: $headerColor;
+            letter-spacing: 5px;
+        }
+        h1 {
+            color: #FFF;
+            font-size: $headerSize;
+            margin-top: 1.2rem;
+            margin-bottom: 1.2rem;
+        }
+    }
+    .step {
+        margin-bottom: 1.5rem;
+        a {
+            color: #FFF;
+            font-size: 28px;
+            display: block;
+            text-decoration: none;
+        }
+        span {
+            color: $tagsColor;
+            font-size: 14px;
+            i {
+                margin-right: .5rem;
+            }
+        }
+        .new {
+            height: 400px;
+            width: 100%;
+            background-size: cover;
+            background-position: center;
+            position: relative;
+            margin-bottom: 1rem;
+            strong {
+                background-color: $tagsColor;
+                font-size: 15px;
+                padding: .6rem 1.5rem;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+            }
+        }
+        p{
+            color: #404040;
+            margin-top: 1rem;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .testimonial {
+        .test {
+            background-image: url("../../img/ursula-ott-F2jKwng4s7U-unsplash.jpg");
+            background-attachment: fixed;
+            background-position: center center;
+            background-size: cover;
+            height: 600px;
+            width: 100%;
+        }
+        .our {
+            display: block;
+            .swiper {
+                position: relative;
+                right: 0;
+                top: 6rem;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .about {
+        height: 100%;
+        padding: 3rem 0rem;
+        .trust {
+            display: block !important;
+        }
+        .about-img {
+            .red {
+                display: none;
+            }
+        }
+        .about-link {
+            text-align: center;
+        }
+    }
+    .we {
+        height: 100%;
+        .tec {
+            display: block !important;
+            padding: 3rem 0;
+            div {
+                width: 50% !important;
+                margin: auto;
+                margin-bottom: 2rem;
+                display: flex;
+                flex-flow: column;
+                justify-content: center;
+                align-items: center;
+                .CircularProgressbar .CircularProgressbar-path {
+                    stroke: $tagsColor;
+                }
+                .CircularProgressbar .CircularProgressbar-trail {
+                    stroke: #404040;
+                }
+                h5 {
+                    color: $tagsColor;
+                    margin-top: 1.5rem;
+                }
+                .CircularProgressbar .CircularProgressbar-text {
+                    fill: $tagsColor;
+                    font-size: 14px;
+                }
+            }
+        }
+    }
+    .services {
+        height: 100%;
+        padding: 3rem 0rem;
+        .top {
+            margin: 0;
+        }
+    }
+    .blog {
+        height: 100%;
+        padding-top: 5rem;
+        padding-bottom: 5rem;
+}
+}
+
+@media (max-width: 450px) {
+    .request {
+        p {
+            width: 100%;
+        }
+        a {
+            padding: 1rem 1.5rem;
+            font-size: 14px;
+        }
+    }
 }
