--- a/src/components/Sass/lang/lang.scss
+++ b/src/components/Sass/lang/lang.scss
@@ -12,4 +12,10 @@
     .red {
         right: -1rem;
     }
+    .tt {
+        border-right: unset;
+        border-left: .6px solid #8C8E90;
+        padding-left: 1.5rem;
+        padding-right: unset;
+    }
 }
