--- a/src/components/Sass/layout/_footer.scss
+++ b/src/components/Sass/layout/_footer.scss
@@ -97,6 +97,10 @@ $mainSize: 18px;
             margin-top: 3rem;
             justify-content: center;
         }
+        .tt {
+            border:  none;
+            padding: 0;
+        }
     }
     
 }
