--- a/src/components/Sass/components/_slider.scss
+++ b/src/components/Sass/components/_slider.scss
@@ -116,58 +116,113 @@ $tagsColor: #C69749;
 }
 
 .testimonial {
-  .swiper {
-    width: 450px;
-    .swiper-slide {
-        height: 350px !important;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 18px;
-        font-size: 22px;
-        font-weight: bold;
-        color: #000;
-        background-color: #FFF;
-        padding: 40px 40px 20px 40px;
-        box-shadow: 0 3px 15px 0 rgb(0 0 0 / 16%);
-        border-radius: 10px;
-        position: relative;
-        .quote {
+  .our {
+    .swiper {
+      width: 450px;
+      .swiper-slide {
+          height: 350px !important;
           display: flex;
-          justify-content: space-between;
-          align-items: flex-end;
-          .qu {
+          align-items: center;
+          justify-content: center;
+          border-radius: 18px;
+          font-size: 22px;
+          font-weight: bold;
+          color: #000;
+          background-color: #FFF;
+          padding: 40px 40px 20px 40px;
+          box-shadow: 0 3px 15px 0 rgb(0 0 0 / 16%);
+          border-radius: 10px;
+          position: relative;
+          .quote {
             display: flex;
-            align-items: center;
-            img {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-              margin-right: 1rem;
+            justify-content: space-between;
+            align-items: flex-end;
+            .qu {
+              display: flex;
+              align-items: center;
+              img {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                margin-right: 1rem;
+              }
+              h1 {
+                color: #000;
+                font-size: 24px;
+                margin-bottom: 0rem;
+              }
+              span {
+                color: $tagsColor;
+                font-size: 18px;
+                font-weight: normal;
+              }
             }
-            h1 {
-              color: #000;
-              font-size: 24px;
-              margin-bottom: 0rem;
-            }
-            span {
-              color: $tagsColor;
-              font-size: 18px;
-              font-weight: normal;
+            i {
+              color: #C69749;
+              font-size: 65px;
+              position: relative;
+              top: 1rem;
             }
           }
-          i {
-            color: #C69749;
-            font-size: 65px;
-            position: relative;
-            top: 1rem;
+          p {
+            font-size: 16px;
+            color: #282A3A;
+            margin-bottom: 3rem;
           }
         }
-        p {
-          font-size: 16px;
-          color: #282A3A;
-          margin-bottom: 3rem;
+    } 
+  }
+  .test {
+    .swiper {
+      width: 100%;
+      .swiper-slide {
+          height: 600px !important;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 22px;
+          font-weight: bold;
+          color: #FFF ;
+          background-color: rgba(0, 0, 0, 0.733);
+          padding: 40px;
+          position: relative;
+          .quote {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            .qu {
+              display: flex;
+              align-items: center;
+              img {
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                margin-right: 1rem;
+              }
+              h1 {
+                color: #FFF;
+                font-size: 24px;
+                margin-bottom: 0rem;
+              }
+              span {
+                color: $tagsColor;
+                font-size: 18px;
+                font-weight: normal;
+              }
+            }
+            i {
+              color: #C69749;
+              font-size: 65px;
+              position: relative;
+              top: 1rem;
+            }
+          }
+          p {
+            font-size: 16px;
+            color: #FFF;
+            margin-bottom: 3rem;
+          }
         }
-      }
-  } 
+    } 
+  }
 }
