--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -248,6 +248,10 @@ $mainSize: 18px;
         height: 600px;
         width: 100%;
         margin-bottom: 3rem;
+        .swiper {
+            display: none;
+            transition: all .5s;
+        }
     }
     .our {
         display: flex;
@@ -259,6 +263,7 @@ $mainSize: 18px;
             position: absolute;
             right: 0;
             top: -3rem;
+            transition: all .5s;
         }
     }
     .count {
@@ -457,10 +462,37 @@ $mainSize: 18px;
         height: 100%;
         padding-top: 5rem;
         padding-bottom: 5rem;
-}
+    }
+    .testimonial {
+        .test {
+            .swiper {
+                display: block !important;
+                transition: all .5s;
+            }
+        }
+    }
+    .our {
+        .swiper {
+            display: none;
+            transition: all .5s;
+        }
+    }
 }
 
 @media (max-width: 450px) {
+    .request {
+        p {
+            width: 100%;
+        }
+        a {
+            padding: 1rem 1.5rem;
+            font-size: 14px;
+        }
+    }
+}
+
+
+@media (max-width: 320px) {
     .request {
         p {
             width: 100%;
