--- a/src/components/Sass/layout/_footer.scss
+++ b/src/components/Sass/layout/_footer.scss
@@ -98,7 +98,7 @@ $mainSize: 18px;
             justify-content: center;
         }
         .tt {
-            border:  none;
+            border: none !important;
             padding: 0;
         }
     }
