--- a/src/components/Sass/layout/_navigation.scss
+++ b/src/components/Sass/layout/_navigation.scss
@@ -76,7 +76,7 @@ $tagsColor: #C69749;
     left: 0 !important;
     width: 100% !important;
     transition: all .3s !important;
-    z-index: 20202020 !important;
+    z-index: 20 !important;
     // height: 90px !important;
     background-color: $mainColor;
     padding: 1rem 0;
@@ -86,6 +86,101 @@ $tagsColor: #C69749;
 .offcanvas-header .btn-close i {
     color: #000000 !important;
     background-color: #000000;
+}
+
+.offcanvas {
+    background-color: #282A3A;
+    // z-index: 10;
+    // position: relative;
+    img {
+        width: 100%;
+        margin-top: 1rem;
+    }
+    p {
+        font-size: 14px;
+        color: $tagsColor;
+    }
+    .widget {
+        margin: 2rem 0;
+        a {
+            color: $tagsColor;
+            text-decoration: none;
+            font-size: 18px;
+            margin-bottom: 0.6rem;
+            &:hover {
+                color: $tagsColor;
+            }
+        }
+        .list-unstyled {
+            li {
+                padding-bottom: 0.6rem;
+            }
+        }
+    }
+    .social {
+        display: flex;
+        margin-top: 2rem;
+        a {
+            margin-right: 1rem;
+            font-size: 26px;
+            border: 1px solid $tagsColor;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            transition: all .3s;
+            color: $tagsColor;
+            text-decoration: none;
+            &:hover {
+                background-color: $tagsColor;
+                color: #FFF;
+                transition: all .3s;
+            }
+        }
+    }
+    .link-inverse {
+        font-size: 18px;
+        transition: all .3s;
+        color: $tagsColor;
+        text-decoration: none;
+        &:hover {
+            color: #FFF;
+            transition: all .3s;
+        }
+    }
+    .close {
+        font-size: 25px;
+        color: #FFF;
+        cursor: pointer;
+    }
+    .nav-link {
+        margin-right: 1rem !important;
+    }
+    .e {
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .offcanvas-header {
+        width: 100%;
+    }
+    .offcanvas-footer {
+        color: $tagsColor;
+    }
+}
+
+@media screen and (max-width: 1205px) {
+    .e {
+        margin-top: 5rem;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .e {
+        margin-top: 0rem;
+    }
 }
 
 @media screen and (max-width: 768px) {
