--- a/src/components/Sass/App.scss
+++ b/src/components/Sass/App.scss
@@ -36,3 +36,33 @@ body {
 }
 
 
+.utility {
+  background: linear-gradient(70deg, $mainColor 15%, rgba(0, 0, 0, 0.461) 100%), url('../img/ramon-kagie-GEKbKJZcEm0-unsplash.jpg');
+  background-size: cover;
+  // object-fit: cover;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-flow: column;
+  .ul {
+    background-color: $tagsColor;
+    width: 400px;
+    // width: 100%;
+    // box-shadow: 0px 0px 10px 0px rgb(79 79 79 / 10%);
+    // margin: 10px 10px 10px 10px;
+    padding: 2rem;
+    h1 {
+      color: #FFF;
+      font-size: 45px;
+    }
+    span {
+      font-size: 18px;
+      color: #FFF;
+      i {
+        margin: 0rem 2rem;
+        color: #000;
+      }
+    }
+  }
+}
