--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -10,6 +10,7 @@ $mainSize: 18px;
     display: flex;
     flex-flow: column;
     justify-content: center;
+    padding-top: 3rem;
     .company {
         margin-bottom: 3rem;
         span {
@@ -483,6 +484,7 @@ $mainSize: 18px;
             bottom: 1rem;
             display: none;
             transition: all .3s;
+            z-index: 3;
             a {
                 display: block;
                 font-size: 25px;
@@ -513,6 +515,7 @@ $mainSize: 18px;
             flex-flow: column;
             width: 60%;
             left: -.5rem;
+            z-index: 3;
             h1 {
                 font-size: 18px;
                 margin: 0;
@@ -521,6 +524,17 @@ $mainSize: 18px;
                 font-size: 12px;
                 color: #FFF;
             }
+        }
+        .overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.656);
+            z-index: 2;
         }
         &:hover {
             .media {
