--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -574,6 +574,10 @@ $mainSize: 18px;
             font-size: 16px;
             color: $tagsColor;
         }
+        i {
+            color: $tagsColor;
+            font-size: 16px;
+        }
     }
 }
 
