--- a/src/components/Sass/lang/lang.scss
+++ b/src/components/Sass/lang/lang.scss
@@ -18,4 +18,16 @@
         padding-left: 1.5rem;
         padding-right: unset;
     }
+    .location {
+      i {
+        margin-left: 2rem;
+        margin-right: 0;
+      }
+    }
+    .brand {
+        div {
+            right: unset;
+            left: 2rem;
+        }
+    }
 }
