--- a/src/components/Sass/App.scss
+++ b/src/components/Sass/App.scss
@@ -6,7 +6,9 @@
 @import "./layout/navigation";
 @import "./pages/about";
 @import "./pages/home";
+@import "./pages/services";
 @import "./lang/lang.scss";
+@import "./components/form";
 
 
 $bgColor: #000000;
