--- a/src/components/Sass/layout/_navigation.scss
+++ b/src/components/Sass/layout/_navigation.scss
@@ -191,4 +191,8 @@ $tagsColor: #C69749;
         width: 120px !important;
         height: 80px;
     }
+    .offcanvas {
+        width: 100% !important;
+        overflow-x: hidden;
+    }
 }
