--- a/src/components/Sass/App.scss
+++ b/src/components/Sass/App.scss
@@ -6,9 +6,11 @@
 @import "./layout/navigation";
 @import "./pages/about";
 @import "./pages/home";
+@import "./pages/projects";
 @import "./pages/services";
 @import "./lang/lang.scss";
 @import "./components/form";
+@import "./components/models";
 
 
 $bgColor: #000000;
