--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -151,6 +151,7 @@ $mainSize: 18px;
         margin-bottom: 1.5rem;
         transition: all .3s;
         height: 360px;
+        cursor: pointer;
         a {
             text-decoration: line-through;
             color:$mainColor;
