--- a/src/components/Sass/layout/_navigation.scss
+++ b/src/components/Sass/layout/_navigation.scss
@@ -50,7 +50,10 @@ $tagsColor: #C69749;
     border: none;
     outline: none;
     box-shadow: none;
-    color: #FFF !important;
+    color: #FFF;
+    option {
+        color: #000000;
+    }
 }
 
 .hamburger {
