--- a/src/components/Sass/lang/lang.scss
+++ b/src/components/Sass/lang/lang.scss
@@ -30,4 +30,14 @@
             left: 2rem;
         }
     }
+    .have a i {
+      margin-right: 0rem;
+      margin-left: 1rem;
+      color: #C69749;
+    }
+    .have h3 i {
+      margin-right: 0rem;
+      margin-left: 1rem;
+      color: #C69749;
+    }
 }
