--- a/src/components/Sass/components/_models.scss
+++ b/src/components/Sass/components/_models.scss
@@ -15,20 +15,37 @@
     opacity: 0;
     transform: scale(0);
     overflow: hidden;
-    z-index: 999;
+    z-index: 99;
     color: #FFF;
     padding: 1rem;
     border-radius: 16px;
-    i {
+    .fa-times {
         position: fixed;
         right: 1rem;
         top: 1rem;
         color: #FFF;
         font-size: 30px;
+        z-index: 999999;
     }
-    img {
-        width: 100%;
-        height: 100%;
+    .swiper {
+        margin-top: 5rem;
+        height: 50%;
+        position: relative;
+        .swiper-slide {
+            width: 100% !important;
+            background-size: cover;
+            text-align: center;
+            img {
+                width: 80%;
+                height: 400px;
+                background-size: contain;
+            }
+        }
+    }
+    .Business {
+        position: absolute;
+        top: 65%;
+        left: 10%;
     }
 }
 
@@ -37,6 +54,13 @@
     opacity: 1;
     transform: scale(1);
 }
+
+// .swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+//     content: "\f061" !important;
+//     position: relative;
+//     width: 50px;
+//     height: 50px;
+// }
 
 @media (max-width: 768px) {
     .model {
