--- a/src/components/Sass/components/_slider.scss
+++ b/src/components/Sass/components/_slider.scss
@@ -59,13 +59,13 @@ $tagsColor: #C69749;
   left: 1rem !important;
 }
 .swiper-button-prev:after {
-  content: "\e949" !important;
+  content: "\f061" !important;
 }
 .swiper-button-next {
   right: 1rem !important;
 }
 .swiper-button-next:after {
-  content: "\e94c" !important;
+  content: "\f061" !important;
 }
 .swiper-button-next.swiper-button-disabled,
 .swiper-button-prev.swiper-button-disabled {
@@ -224,5 +224,47 @@ $tagsColor: #C69749;
           }
         }
     } 
+  }
+}
+
+.image-swiper-button-next {
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  z-index: 5;
+  width: 50px;
+  height: 50px;
+  background-color: $tagsColor;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 50%;
+  &:hover {
+    color: #FFF;
+  }
+}
+
+.image-swiper-button-prev {
+  position: absolute;
+  top: 50%;
+  left: 1rem;
+  z-index: 5;
+  width: 50px;
+  height: 50px;
+  background-color: $tagsColor;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #FFF;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: 50%;
+  &:hover {
+    color: #FFF;
   }
 }
