--- a/src/components/Sass/components/_models.scss
+++ b/src/components/Sass/components/_models.scss
@@ -15,7 +15,7 @@
     opacity: 0;
     transform: scale(0);
     overflow: hidden;
-    z-index: 99;
+    z-index: 99999;
     color: #FFF;
     padding: 1rem;
     border-radius: 16px;
@@ -70,5 +70,15 @@
         height: 90%;
         top: 5%;
         left: 5%;
+        .swiper {
+            .swiper-slide {
+                img {
+                    width: 90%;
+                    height: 250px;
+                    background-size: cover;
+                    background-position: center;
+                }
+            }
+        }
     }
 }
